[Fast Update] Fixed text align and color

--- a/src/styles/Task.scss
+++ b/src/styles/Task.scss
@@ -123,7 +123,9 @@
         padding: 5px 0 5px 10px;
         color: #737373;
         border-radius: 10px;
+        text-align: left;
         transition: all 0.3s ease;
+
     }
     @media screen and (max-width: 768px) {
         display: flex;
@@ -145,6 +147,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    color: rgba(255, 255, 255, 0.584);
     align-items: center;
     padding-left: 10px;
 }
